Added lists for Homunculus, Mercenaries and Jobs. Client now checks wich actor type we are handling. Create HomunObj class.

--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -714,6 +714,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\objects\homunobj.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\objects\npcobj.cc"
 				>
 			</File>
@@ -742,6 +746,10 @@
 				</File>
 				<File
 					RelativePath="..\include\roengine\objects\cube_object.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\roengine\objects\homunobj.h"
 					>
 				</File>
 				<File
