--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -718,6 +718,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\objects\mobobj.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\objects\npcobj.cc"
 				>
 			</File>
@@ -750,6 +754,10 @@
 				</File>
 				<File
 					RelativePath="..\include\roengine\objects\homunobj.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\roengine\objects\mobobj.h"
 					>
 				</File>
 				<File
