--- a/rogl/Makefile
+++ b/rogl/Makefile
@@ -4,7 +4,8 @@ RM=rm -f
 CP=cp
 MKDIR=mkdir -p
 
-CFLAGS=-Wall -g -Iinclude -I../roint/include
+CFLAGS=-Wall -g -Iinclude -I../roint/include -I../sdl_engine/include
+LDFLAGS=-L../sdl_engine/ -L../roint/ -lroint -lz -lsdle.dll -lopengl32 -lglu32
 
 MAJOR_VER=0
 MINOR_VER=1
@@ -12,15 +13,12 @@ MINOR_VER=1
 DEPDIR=.deps
 OBJDIR=.objs
 
-TARGET=librogl
+PROJECTNAME=rogl
+TARGET=lib$(PROJECTNAME)
 
-SHARED_SO=$(TARGET).so
-SHARED_MAJOR=$(SHARED_SO).$(MAJOR_VER)
+HOST_PLATFORM = ${shell $(CPP) -dumpmachine}
 
-SHARED=$(SHARED_MAJOR).$(MINOR_VER)
-STATIC=$(TARGET).a
-
-SRC=actgl.cc blob.cc image_bmp.cc image_spr.cc image.cc rogl.cc rsmgl.cc texture.cc
+SRC=actgl.cc rogl.cc rsmgl.cc rswgl.cc sprgl.cc
 
 SHARED_OBJ=$(SRC:%.cc=$(OBJDIR)/%.lo)
 STATIC_OBJ=$(SRC:%.cc=$(OBJDIR)/%.o)
@@ -28,9 +26,42 @@ DEPS=$(SRC:%.cc=$(DEPDIR)/%.P)
 
 PREFIX=/usr/local
 
-LDFLAGS=-lz
+## OPTIONAL SWITCHES
+DEBUG_BUILD=1
 
-all: static
+#LOGSYS
+CFLAGS+=-DUSE_LOGSYS -I../logsys/include
+LDFLAGS+=-L../logsys -llogsys
+
+## END OF OPTIONAL SWITCHES
+
+STATIC=$(TARGET).a
+
+# debug flags
+ifeq ($(DEBUG_BUILD),1)
+CFLAGS+=-g -DDEBUG
+else
+CFLAGS+=-O2
+endif
+
+# In mingw we should use .dll, not .so.
+ifeq ($(HOST_PLATFORM), mingw32)
+SHARED_SO=$(PROJECTNAME).dll
+SHARED_MAJOR=lib$(SHARED_SO).a
+SHARED=$(SHARED_SO)
+
+SHARED_LDFLAGS=-shared -Wl,--out-implib,$(SHARED_MAJOR)
+SHARED_CFLAGS=$(CFLAGS)
+else
+SHARED_SO=$(TARGET).so
+SHARED_MAJOR=$(SHARED_SO).$(MAJOR_VER)
+SHARED=$(SHARED_MAJOR).$(MINOR_VER)
+
+SHARED_LDFLAGS=-shared -Wl,-soname,$(SHARED_MAJOR)
+SHARED_CFLAGS=-fPIC $(CFLAGS)
+endif
+
+all: static shared
 
 -include $(SRC:%.cc=$(DEPDIR)/%.P)
 
@@ -50,8 +81,7 @@ uninstall:
 	$(RM) -r $(PREFIX)/include/roint	
 
 shared $(SHARED): $(SHARED_OBJ)
-#	$(CC) -shared $(LDFLAGS) -Wl,-soname,$(SHARED_MAJOR) -o $(SHARED) $^
-	$(CC) -shared -o $(SHARED) $(SHARED_OBJ) /mingw/lib/libz.a -Wl,--out-implib,$(TARGET)_dll.a
+	$(CC) $(SHARED_LDFLAGS) -o $(SHARED) $^ $(LDFLAGS)
 
 static $(STATIC): $(STATIC_OBJ)
 	$(AR) rcs $(STATIC) $^ 
@@ -59,6 +89,7 @@ static $(STATIC): $(STATIC_OBJ)
 clean:
 	$(RM) $(SHARED_OBJ) $(STATIC_OBJ)
 	$(RM) $(SHARED) $(STATIC)
+	$(RM) $(SHARED_MAJOR)
 	
 distclean:	
 	$(RM) $(SHARED_OBJ) $(STATIC_OBJ)
@@ -83,7 +114,7 @@ $(OBJDIR)/%.lo: %.cc $(DEPDIR)/%.P
 	@if test ! -d $(OBJDIR);\
 		then mkdir $(OBJDIR);\
 	fi
-	$(CC) -fPIC $(CFLAGS) -c -o $@ $<
+	$(CC) $(SHARED_CFLAGS) -c -o $@ $<
 
 # Regular objects
 $(OBJDIR)/%.o: %.cc $(DEPDIR)/%.P
