--- a/roint/msvc2008/roint.vcproj
+++ b/roint/msvc2008/roint.vcproj
@@ -720,6 +720,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\log.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\ro\ro.h"
 				>
 			</File>
