--- a/roengine/Makefile
+++ b/roengine/Makefile
@@ -1,80 +1,70 @@
-# $Id: Makefile 57 2009-07-21 00:09:26Z sergio $
-CC=g++
-RM=rm -f
-CP=cp
-MKDIR=mkdir -p
+# $Id$
+CC = g++
+RM = rm -f
+AR = ar
 
-CFLAGS=-Wall -g -Iinclude -I../roint/include -I../ronet/include -I../rogl/include
+CFLAGS+=-Iinclude -I/usr/include -I../roint/include -I../rogl/include -I../sdl_engine/include -I../ronet/include -DUNICODE
+LDFLAGS=-L/usr/lib -lroint.dll -lsdle.dll -lronet.dll -lrogl.dll -lfreetype -lpng -ljpeg -lz -lSDL -lopengl32 -lglu32
 
-MAJOR_VER=0
-MINOR_VER=1
+PROJECTNAME=roengine
+TARGET=lib$(PROJECTNAME)
+
+SRC=cache_manager.cc file_manager.cc gl_object_cache.cc stdafx.cc camera.cc frustum.cc ro_engine.cc texturecache.cc \
+	charobj.cc full_act.cc ro_object_cache.cc texturemanager.cc file_data.cc gl_object.cc spr_cache.cc \
+	gui/button.cc gui/dialog.cc gui/label.cc gui/window.cc gui/buttonbar.cc gui/element.cc gui/list.cc \
+	gui/chatwindow.cc gui/event.cc gui/progressbar.cc gui/desktop.cc gui/gui.cc gui/textinput.cc \
+	objects/act_object.cc objects/homunobj.cc objects/rsm_object.cc objects/actor.cc objects/mobobj.cc \
+	objects/rsw_object.cc objects/cube_object.cc objects/npcobj.cc
+
+## OPTIONAL SWITCHES
+DEBUG_BUILD=1
+
+#LOGSYS
+CFLAGS+=-DUSE_LOGSYS -I../logsys/include
+LDFLAGS+=-L../logsys -llogsys
+
+## END OF OPTIONAL SWITCHES
+## Not much to see from here...
 
 DEPDIR=.deps
 OBJDIR=.objs
 
-TARGET=libroengine
-
-SHARED_SO=$(TARGET).so
-SHARED_MAJOR=$(SHARED_SO).$(MAJOR_VER)
-
-SHARED=$(SHARED_MAJOR).$(MINOR_VER)
-STATIC=$(TARGET).a
-
-SRC=camera.cc file_data.cc file_manager.cc frustum.cc full_act.cc gl_object_cache.cc \
-	gl_object.cc ro_engine.cc ro_object_cache.cc sdl_engine.cc texturemanager.cc \
-	gui/button.cc gui/desktop.cc gui/element.cc gui/event.cc gui/glf_font.cc \
-	gui/gui.cc gui/label.cc gui/list.cc gui/textinput.cc gui/window.cc gui/font.cc \
-	objects/act_object.cc objects/cube_object.cc objects/rsm_object.cc \
-	objects/rsw_object.cc
-
-SHARED_OBJ=$(SRC:%.cc=$(OBJDIR)/%.lo)
-STATIC_OBJ=$(SRC:%.cc=$(OBJDIR)/%.o)
+OBJ=$(SRC:%.cc=$(OBJDIR)/%.o)
 DEPS=$(SRC:%.cc=$(DEPDIR)/%.P)
 
 PREFIX=/usr/local
+	
+HOST_PLATFORM = ${shell $(CPP) -dumpmachine}
 
-LDFLAGS=-lz
+STATIC=$(TARGET).a
 
-all: static
+# debug flags
+ifeq ($(DEBUG_BUILD),1)
+CFLAGS+=-g -DDEBUG
+else
+CFLAGS+=-O2
+endif
+
+all: $(STATIC)
 
 -include $(SRC:%.cc=$(DEPDIR)/%.P)
 
-install: $(SHARED) $(STATIC)
-	$(CP) $(SHARED) $(PREFIX)/lib
-	$(CP) $(STATIC) $(PREFIX)/lib
-	ln -sf $(SHARED) $(PREFIX)/lib/$(SHARED_MAJOR)
-	ln -sf $(SHARED) $(PREFIX)/lib/$(SHARED_SO)
-	$(MKDIR) $(PREFIX)/include/roengine
-	$(CP) include/roengine/* $(PREFIX)/include/roengine
-	# TODO: LDCONFIG
-
-uninstall:
-	$(RM) $(PREFIX)/lib/$(SHARED)
-	$(RM) $(PREFIX)/lib/$(STATIC)
-	$(RM) $(PREFIX)/lib/$(SHARED_MAJOR)
-	$(RM) -r $(PREFIX)/include/roengine
-
-shared $(SHARED): $(SHARED_OBJ)
-	$(CC) -shared $(LDFLAGS) -Wl,-soname,$(SHARED_MAJOR) -o $(SHARED) $^
-
-static $(STATIC): $(STATIC_OBJ)
+$(STATIC): $(OBJ)
 	$(AR) rcs $(STATIC) $^ 
 	
 clean:
-	$(RM) $(SHARED_OBJ) $(STATIC_OBJ)
-	$(RM) $(SHARED) $(STATIC)
+	$(RM) $(OBJ) $(STATIC)
 	
 distclean:	
-	$(RM) $(SHARED_OBJ) $(STATIC_OBJ)
-	$(RM) $(SHARED) $(STATIC)
-	$(RM) $(OBJDIR) $(DEPDIR)
+	$(RM) $(OBJ) $(STATIC)
+	$(RM) -R $(OBJDIR) $(DEPDIR)
 
 # Dependencies
 $(DEPDIR)/%.d: %.cc
 	@if test ! -d $(DEPDIR);\
 		then mkdir $(DEPDIR);\
-		mkdir $(DEPDIR)/gui;\
 		mkdir $(DEPDIR)/objects;\
+		mkdir $(DEPDIR)/gui;\
 	fi
 	@$(CC) -M $(CFLAGS) -o $@ $<
 
@@ -84,20 +74,12 @@ $(DEPDIR)/%.P: $(DEPDIR)/%.d
 	    -e '/^$$/ d' -e 's/$$/ :/' < $< >> $@; \
 	$(RM) $<	
 
-# Shared objects
-$(OBJDIR)/%.lo: %.cc $(DEPDIR)/%.P
-	@if test ! -d $(OBJDIR);\
-		then mkdir $(OBJDIR);\
-		mkdir $(OBJDIR)/gui;\
-		mkdir $(OBJDIR)/objects;\
-	fi
-	$(CC) -fPIC $(CFLAGS) -c -o $@ $<
-
 # Regular objects
 $(OBJDIR)/%.o: %.cc $(DEPDIR)/%.P
 	@if test ! -d $(OBJDIR);\
 		then mkdir $(OBJDIR);\
-		mkdir $(OBJDIR)/gui;\
 		mkdir $(OBJDIR)/objects;\
+		mkdir $(OBJDIR)/gui;\
 	fi
-	$(CC) $(CFLAGS) -DROGL_STATIC -c -o $@ $<
+	$(CC) $(CFLAGS) -c -o $@ $<
+
